--- a/publication/index.html
+++ b/publication/index.html
@@ -761,7 +761,7 @@
     
 
   
-  <span >Gaspard Farge</span>, <span >Nikolaï M Shapiro</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
+  <span ><a href="/tecto/author/gaspard-farge/">Gaspard Farge</a></span>, <span >Nikolaï M Shapiro</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </span>
   (2020).
   <a href="/tecto/publication/farge-2020/">Moment-duration scaling of low-frequency earthquakes in Guerrero, Mexico</a>.
