add leonard and update ayako

--- a/software/index.html
+++ b/software/index.html
@@ -238,7 +238,7 @@
   
   <meta property="og:site_name" content="Tectonophysics">
   <meta property="og:url" content="https://eqsci.mit.edu/tecto/software/">
-  <meta property="og:title" content="Softwares | Tectonophysics">
+  <meta property="og:title" content="Publications | Tectonophysics">
   <meta property="og:description" content="Assistant Professor"><meta property="og:image" content="https://eqsci.mit.edu/tecto/images/logo.svg">
   <meta property="twitter:image" content="https://eqsci.mit.edu/tecto/images/logo.svg"><meta property="og:locale" content="en-us">
   
@@ -289,7 +289,7 @@
 
 
 
-  <title>Softwares | Tectonophysics</title>
+  <title>Publications | Tectonophysics</title>
 
 </head>
 <body id="top" data-spy="scroll" data-offset="70" data-target="#TableOfContents" >
@@ -514,7 +514,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Softwares</h1>
+  <h1>Publications</h1>
 
   
 
