--- a/index.html
+++ b/index.html
@@ -1937,7 +1937,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
 
     <div class="portrait-title">
       <h2><a href="/tecto/author/yichen-geng/">Yichen Geng</a></h2>
-      <h3>Visitor</h3>
+      <h3>Graduate student</h3>
       <ul class="network-icon" aria-hidden="true">
   
     
