fixed date aden-2022

--- a/publication/index.html
+++ b/publication/index.html
@@ -849,7 +849,7 @@
   <span ><a href="/tecto/author/florent-aden-antoniow/">Florent Aden-Antoniow</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/leonard-simon-seydoux/">Leonard Simon Seydoux</a></span>
   </span>
   (2022).
-  <a href="/tecto/publication/aden-2022/">An Adaptable Random Forest Model for the Declustering of Earthquake Catalogs</a>.
+  <a href="/tecto/publication/aden-2022/">An adaptable random forest model for the declustering of earthquake catalogs</a>.
   <em>Journal of Geophysical Research: Solid Earth</em>.
   
   <p>
