--- a/publication/index.html
+++ b/publication/index.html
@@ -1405,7 +1405,7 @@
     
 
   
-  <span >Eric Beaucé</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Anne Paul</span>, <span >Michel Campillo</span>, <span >Robert D van der Hilst</span>
+  <span ><a href="/tecto/author/eric-beauce/">Eric Beaucé</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Anne Paul</span>, <span >Michel Campillo</span>, <span >Robert D van der Hilst</span>
   </span>
   (2019).
   <a href="/tecto/publication/beauce-2019/">Systematic Detection of Clustered Seismicity Beneath the Southwestern Alps</a>.
@@ -2026,7 +2026,7 @@
     
 
   
-  <span >Eric Beaucé</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Alexey Romanenko</span>
+  <span ><a href="/tecto/author/eric-beauce/">Eric Beaucé</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Alexey Romanenko</span>
   </span>
   (2017).
   <a href="/tecto/publication/beauce-2017/">Fast matched-filter (FMF): an efficient seismic matched-filter search for both CPU and GPU architectures</a>.
