add mathilde and rachel

--- a/publication/index.html
+++ b/publication/index.html
@@ -1957,7 +1957,7 @@
     
 
   
-  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Rachel E Abercrombie</span>
+  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/rachel-e.-abercrombie/">Rachel E. Abercrombie</a></span>
   </span>
   (2018).
   <a href="/tecto/publication/frank-2018-a/">Adapting the matched-filter search to a wide-aperture network: an aftershock sequence and an earthquake swarm in Connecticut</a>.
@@ -2586,7 +2586,7 @@
     
 
   
-  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Mathilde Radiguet</span>, <span >Baptiste Rousset</span>, <span >Nikolaï M Shapiro</span>, <span >Allen L Husker</span>, <span >Vladimir Kostoglodov</span>, <span >Nathalie Cotte</span>, <span >Michel Campillo</span>
+  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/mathilde-radiguet/">Mathilde Radiguet</a></span>, <span >Baptiste Rousset</span>, <span >Nikolaï M Shapiro</span>, <span >Allen L Husker</span>, <span >Vladimir Kostoglodov</span>, <span >Nathalie Cotte</span>, <span >Michel Campillo</span>
   </span>
   (2015).
   <a href="/tecto/publication/frank-2015-b/">Uncovering the geodetic signature of silent slip through repeating earthquakes</a>.
