--- a/index.html
+++ b/index.html
@@ -1444,6 +1444,9 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
 
 
 
+  
+  
+
 
 
 
@@ -2083,7 +2086,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
 
     
     <div class="see-all">
-      <a href="/tecto/publication/">
+      <a href="/tecto/author/william-b.-frank/">
         See all publications
         <i class="fas fa-angle-right"></i>
       </a>
