--- a/publication/farge-2020/index.html
+++ b/publication/farge-2020/index.html
@@ -840,7 +840,7 @@
 
       <div class="media-body">
         <h5 class="card-title"><a href="/tecto/author/gaspard-farge/">Gaspard Farge</a></h5>
-        <h6 class="card-subtitle">Graduate student</h6>
+        <h6 class="card-subtitle">Postdoctoral Associate</h6>
         <p class="card-text">Visiting student, studying how fluid flow shapes seismicity in geological plumbing systems.</p>
         <ul class="network-icon" aria-hidden="true">
   
