--- a/index.html
+++ b/index.html
@@ -1767,7 +1767,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
     
 
   
-  <span >Leoncio Cabrera</span>, <span >Piero Poli</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
+  <span >Leoncio Cabrera</span>, <span ><a href="/tecto/author/piero-poli/">Piero Poli</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </div>
   
   
