--- a/publication/index.html
+++ b/publication/index.html
@@ -922,7 +922,7 @@
     
 
   
-  <span >Leoncio Cabrera</span>, <span >Piero Poli</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
+  <span >Leoncio Cabrera</span>, <span ><a href="/tecto/author/piero-poli/">Piero Poli</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>
   </span>
   (2022).
   <a href="/tecto/publication/cabrera-2022/">Tracking the Spatio-Temporal Evolution of Foreshocks Preceding the Mw 6.1 2009 L’Aquila Earthquake</a>.
@@ -2241,7 +2241,7 @@
     
 
   
-  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span >Piero Poli</span>, <span >Hugo Perfettini</span>
+  <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/piero-poli/">Piero Poli</a></span>, <span >Hugo Perfettini</span>
   </span>
   (2017).
   <a href="/tecto/publication/frank-2017-a/">Mapping the rheology of the Central Chile subduction zone with aftershocks</a>.
