--- a/index.html
+++ b/index.html
@@ -1457,6 +1457,12 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
 
 
 
+
+
+
+
+
+
   
 
 
@@ -2014,6 +2020,17 @@ Highlight your code snippets, take notes on math classes, and draw diagrams from
 
 
 
+
+  
+  
+
+
+
+
+
+
+
+  
 
 
 
@@ -2651,7 +2668,7 @@ Highlight your code snippets, take notes on math classes, and draw diagrams from
 
     
     <div class="see-all">
-      <a href="/tecto/author/william-b.-frank/">
+      <a href="/tecto/publication/">
         See all publications
         <i class="fas fa-angle-right"></i>
       </a>
