--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
     
     <a href="/tecto/post/paper_wimez_2022/" class="summary-link">
       <div class="article-style">
-        New paper out from Mathilde Wimez! Mathilde has published a new paper that is now available in GJI. Go check it out href="https://eqsci.mit.edu/tecto/publication/wimez-2022/">here!
+        Mathilde has published a new paper that is now available in GJI. Go check it out here!
       </div>
     </a>
     
