--- a/index.html
+++ b/index.html
@@ -1983,7 +1983,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
     
 
   
-  <span ><a href="/tecto/author/seydoux/">seydoux</a></span>
+  <span ><a href="/tecto/author/leonard-s.-seydoux/">Leonard S. Seydoux</a></span>
   </div>
   
   
