Jared leveled up

--- a/publication/yang-2022/index.html
+++ b/publication/yang-2022/index.html
@@ -849,7 +849,7 @@
 
       <div class="media-body">
         <h5 class="card-title"><a href="/tecto/author/jared-bryan/">Jared Bryan</a></h5>
-        <h6 class="card-subtitle">Graduate Student</h6>
+        <h6 class="card-subtitle">PhD Candidate</h6>
         <p class="card-text">I study magma transport and storage.</p>
         <ul class="network-icon" aria-hidden="true">
   
