--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
 
     <div class="portrait-title">
       <h2><a href="/tecto/author/jared-bryan/">Jared Bryan</a></h2>
-      <h3>Graduate Student</h3>
+      <h3>PhD Candidate</h3>
         
       <ul class="network-icon" aria-hidden="true">
   
