--- a/people/index.html
+++ b/people/index.html
@@ -818,7 +818,7 @@
 
     <div class="portrait-title">
       <h2><a href="/tecto/author/jared-bryan/">Jared Bryan</a></h2>
-      <h3>Graduate Student</h3>
+      <h3>PhD Candidate</h3>
         
       <ul class="network-icon" aria-hidden="true">
   
