--- a/research/volcanoes/index.html
+++ b/research/volcanoes/index.html
@@ -760,7 +760,7 @@ Most volcanic activity is driven by influx of melt from the mantle, but geophysi
 
       <div class="media-body">
         <h5 class="card-title"><a href="/tecto/author/jared-bryan/">Jared Bryan</a></h5>
-        <h6 class="card-subtitle">Graduate Student</h6>
+        <h6 class="card-subtitle">PhD Candidate</h6>
         <p class="card-text">I study magma transport and storage.</p>
         <ul class="network-icon" aria-hidden="true">
   
