--- a/research/slow_earthquakes/index.html
+++ b/research/slow_earthquakes/index.html
@@ -870,7 +870,7 @@
       <div class="media-body">
         <h5 class="card-title"><a href="/tecto/author/caroline-mouchon/">Caroline Mouchon</a></h5>
         <h6 class="card-subtitle">Graduate Student</h6>
-        <p class="card-text">Graduate student</p>
+        <p class="card-text">I study slow slip events in subduction zones.</p>
         <ul class="network-icon" aria-hidden="true">
   
     
