--- a/index.html
+++ b/index.html
@@ -1615,7 +1615,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
     
 
   
-  <span ><a href="/tecto/author/ayako-tsuchiyama/">Ayako Tsuchiyama</a></span>, <span ><a href="/tecto/author/caroline-mouchon/">Caroline Mouchon</a></span>
+  <span ><a href="/tecto/author/ayako-tsuchiyama/">Ayako Tsuchiyama</a></span>, <span ><a href="/tecto/author/jared-bryan/">Jared Bryan</a></span>, <span ><a href="/tecto/author/caroline-mouchon/">Caroline Mouchon</a></span>
   </div>
   
   
