--- a/index.html
+++ b/index.html
@@ -1592,7 +1592,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
     
     <a href="/tecto/post/workshop_ssw_2023/" class="summary-link">
       <div class="article-style">
-        Ayako, Jared and Caroline went to the Seismology Student Workshop at Lamont-Doherty Earth Observatory (Colombia University, USA), a 2-days workshop organized by and for graduate students. Ayako presented a poster about Intermediate-depth earthquakes and Jared gave a talk about volcanoes and slow slip events focused on Mount St.
+        Ayako, Jared and Caroline went to the Seismology Student Workshop at Lamont-Doherty Earth Observatory (Colombia University, USA), a two-day workshop organized by and for graduate students. Ayako presented a poster about Intermediate-depth earthquakes and Jared gave a talk about volcanoes and slow slip events focused on Mount St.
       </div>
     </a>
     
