--- a/research/slow_earthquakes/index.html
+++ b/research/slow_earthquakes/index.html
@@ -724,9 +724,14 @@
 <h2 id="role-in-seismic-cycle">Role in seismic cycle</h2>
 <p><strong><em>Sous-sous-titre: blabla</em></strong></p>
 <p>Blabla Louise &amp; caro</p>
-<h2 id="structure-of-the-plate-interface">Structure of the plate interface</h2>
-<p><strong><em>Sous-sous-titre: blabla</em></strong></p>
-<p>Blabla Qingyu</p>
+<h2 id="what-makes-low-frequency-earthquakes-low-frequency">What makes low-frequency earthquakes low frequency?</h2>
+<p><strong>The roles of attenuation and source</strong></p>
+<p>Low-frequency earthquakes, atypical seismic events distinct from regular earthquakes, occur downdip of the seismogenic megathrust where an aseismic rheology dominates the subduction plate boundary. The spectra of low-frequency earthquakes are consistent with the classical earthquake model, yet their rupture duration and stress drop are orders of magnitude different from ordinary earthquakes.</p>
+<p>image
+caption: (Spatiotemporal behavior and spectra of low-frequency and regular earthquakes in the Nankai Trough. (modified from Wang et al., 2023, under review)
+<img src="fig_qy1.png" alt=""></p>
+<p>The Nankai Trough, where low frequency earthquakes were first observed, is monitored by a long-term borehole monitoring network that has recorded low-frequency earthquakes in the same epicentral area as both crustal and intraslab earthquakes. We focus on two depth columns directly beneath two seismic stations where the subduction interface is sandwiched between earthquakes above and below, with one depth column hosting low-frequency earthquakes and the other not. With this unique seismic geometry, we investigate the endmember possibilities of attenuation experienced by low-frequency earthquakes to isolate their source process. Through this natural controlled experiment, we place key constraints on the character of the low-frequency earthquake source to address the outstanding question: <strong><em>what makes low-frequency earthquakes low frequency?</em></strong></p>
+<p>We observe that the source regions of the low frequency earthquakes are marked by high pore fluid pressure indicated by high <em>Qp/Qs</em> and <em>Vp/Vs</em> ratios. This suggests that local variations in the rheology of this transitional zone, just downdip of where major earthquakes occur and where slow fault slip dominates the tectonic slip budget, are responsible for earthquakes that rupture an order of magnitude more slowly than is typical. An atypical rupture mechanism associated with this rheology, likely governed by processes linked to saturated fault conditions at the plate boundary, is necessary to explain the low-frequency earthquake source. We conclude their low-frequency nature primarily results from an atypical seismic rupture process rather than near-source attenuation. Attenuation is not what makes low-frequency earthquakes low frequency.</p>
 
     </div>
 
