--- a/publication/aden-2020/index.html
+++ b/publication/aden-2020/index.html
@@ -865,7 +865,7 @@
       <div class="media-body">
         <h5 class="card-title"><a href="/tecto/author/florent-aden-antoniow/">Florent Aden-Antoniow</a></h5>
         <h6 class="card-subtitle">R&amp;D Data Scientist</h6>
-        <p class="card-text">Postdoctoral Researcher</p>
+        <p class="card-text">I am interested in the statistical behavior of earthquakes.</p>
         <ul class="network-icon" aria-hidden="true">
   
     
