--- a/research/intermediate-depth_earthquakes/index.html
+++ b/research/intermediate-depth_earthquakes/index.html
@@ -753,8 +753,8 @@ installed man-made seismometers, and she hopes to work on those seismic data in 
 
       <div class="media-body">
         <h5 class="card-title"><a href="/tecto/author/ayako-tsuchiyama/">Ayako Tsuchiyama</a></h5>
-        <h6 class="card-subtitle">Graduate Student</h6>
-        <p class="card-text">Graduate student</p>
+        <h6 class="card-subtitle">PhD Candidate</h6>
+        <p class="card-text">I study the earthquake source.</p>
         <ul class="network-icon" aria-hidden="true">
   
     
