--- a/research/slow_earthquakes/index.html
+++ b/research/slow_earthquakes/index.html
@@ -898,7 +898,7 @@ caption: (Spatiotemporal behavior and spectra of low-frequency and regular earth
 
       <div class="media-body">
         <h5 class="card-title"><a href="/tecto/author/caroline-mouchon/">Caroline Mouchon</a></h5>
-        <h6 class="card-subtitle">Graduate Student</h6>
+        <h6 class="card-subtitle">PhD Candidate</h6>
         <p class="card-text">I study slow slip events in subduction zones.</p>
         <ul class="network-icon" aria-hidden="true">
   
