--- a/publication/index.html
+++ b/publication/index.html
@@ -836,7 +836,7 @@
   <span ><a href="/tecto/author/caroline-mouchon/">Caroline Mouchon</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/mathilde-radiguet/">Mathilde Radiguet</a></span>, <span ><a href="/tecto/author/piero-poli/">Piero Poli</a></span>, <span >Nathalie Cotte</span>
   </span>
   (2023).
-  <a href="/tecto/publication/mouchon-2023/">Subdaily Slow Fault Slip Dynamics Captured by Low-Frequency Earthquakes</a>.
+  <a href="/tecto/publication/mouchon-2023/">Subdaily slow fault slip dynamics captured by low-frequency earthquakes</a>.
   <em>AGU Advances</em>.
   
   <p>
