--- a/index.html
+++ b/index.html
@@ -2286,7 +2286,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
 <div class="card-simple">
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/tecto/publication/mouchon-2023/">Subdaily Slow Fault Slip Dynamics Captured by Low-Frequency Earthquakes</a>
+    <a href="/tecto/publication/mouchon-2023/">Subdaily slow fault slip dynamics captured by low-frequency earthquakes</a>
   </h3>
 
   
