--- a/publication/index.html
+++ b/publication/index.html
@@ -848,7 +848,7 @@
   <span ><a href="/tecto/author/eric-beauce/">Eric Beaucé</a></span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/leonard-s.-seydoux/">Leonard S. Seydoux</a></span>, <span ><a href="/tecto/author/piero-poli/">Piero Poli</a></span>, <span >Robert D van der Hilst</span>, <span >Michel Campillo</span>
   </span>
   (2023).
-  <a href="/tecto/publication/beauce-2023/"></a>.
+  <a href="/tecto/publication/beauce-2023/">BPMF: A backprojection and matched-filtering workflow for automated earthquake detection and location</a>.
   <em>Seismological Research Letters</em>.
   
   <p>
