--- a/index.html
+++ b/index.html
@@ -2399,7 +2399,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1029/2023JB027291" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1029/2023JB027971" target="_blank" rel="noopener">
   DOI
 </a>
 
@@ -2520,7 +2520,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://doi.org/10.1126/sciadv.ado1469" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1126/sciadv.ado1469" target="_blank" rel="noopener">
   DOI
 </a>
 
