--- a/publication/index.html
+++ b/publication/index.html
@@ -889,7 +889,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1029/2023JB027291" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1029/2023JB027971" target="_blank" rel="noopener">
   DOI
 </a>
 
@@ -1027,7 +1027,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://doi.org/10.1126/sciadv.ado1469" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1126/sciadv.ado1469" target="_blank" rel="noopener">
   DOI
 </a>
 
