--- a/publication/wang-2024/index.html
+++ b/publication/wang-2024/index.html
@@ -744,7 +744,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/https://doi.org/10.1126/sciadv.ado1469" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1126/sciadv.ado1469" target="_blank" rel="noopener">
   DOI
 </a>
 
