--- a/publication/index.html
+++ b/publication/index.html
@@ -927,7 +927,7 @@
     
 
   
-  <span >Jannes Münchmeyer</span>, <span >Sophie Giffard-Roisin</span>, <span >Marielle Malfante</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/piero-poli/">Piero Poli</a></span>, <span >David Marsan</span>, <span >Anne Socquet</span>
+  <span ><a href="/tecto/author/jannes-munchmeyer/">Jannes Münchmeyer</a></span>, <span >Sophie Giffard-Roisin</span>, <span >Marielle Malfante</span>, <span ><a href="/tecto/author/william-b.-frank/">William B. Frank</a></span>, <span ><a href="/tecto/author/piero-poli/">Piero Poli</a></span>, <span >David Marsan</span>, <span >Anne Socquet</span>
   </span>
   (2024).
   <a href="/tecto/publication/munchmeyer-2024/">Deep learning detects uncataloged low-frequency earthquakes across regions</a>.
