--- a/index.html
+++ b/index.html
@@ -1543,7 +1543,7 @@ He leads the Tectonophysics research group that focuses on crustal deformation w
 
     <div class="portrait-title">
       <h2><a href="/tecto/author/gabby-rose/">Gabby Rose</a></h2>
-      <h3>Undergrad student</h3>
+      <h3>Undergrad Student</h3>
         
       <ul class="network-icon" aria-hidden="true">
   
