--- a/people/index.html
+++ b/people/index.html
@@ -1383,7 +1383,7 @@
 
     <div class="portrait-title">
       <h2><a href="/tecto/author/gabby-rose/">Gabby Rose</a></h2>
-      <h3>Undergrad student</h3>
+      <h3>Undergrad Student</h3>
         
       <ul class="network-icon" aria-hidden="true">
   
